# mmdb

./: .gitignore  Cargo.toml  README.md
crates/mmdb/: Cargo.toml
crates/mmdb-blob/: Cargo.toml
crates/mmdb-blob/src/: fs.rs  lib.rs  metadata.rs  tests.rs
crates/mmdb-catalog/: Cargo.toml
crates/mmdb-catalog/src/: lib.rs
crates/mmdb-core/: Cargo.toml
crates/mmdb-core/src/: error.rs  lib.rs  traits.rs  types.rs
crates/mmdb-graph/: Cargo.toml
crates/mmdb-graph/src/: lib.rs
crates/mmdb-mmql/: Cargo.toml
crates/mmdb-mmql/src/: ast.rs  lib.rs  parser.rs  util.rs
crates/mmdb-mmql/src/tests/: mod.rs
crates/mmdb-query/: Cargo.toml
crates/mmdb-query/src/: builder.rs  eval.rs  executor.rs  explain.rs  ir.rs  lib.rs  optimizer.rs
crates/mmdb-query/src/tests/: mod.rs
crates/mmdb-storage/: Cargo.toml
crates/mmdb-storage/src/: codec.rs  engine.rs  keys.rs  lib.rs  partitions.rs
crates/mmdb-udf/: Cargo.toml
crates/mmdb-udf/src/: lib.rs
crates/mmdb-vector/: Cargo.toml
crates/mmdb-vector/examples/: recall_bench.rs
crates/mmdb-vector/src/: hit.rs  index.rs  lib.rs  store.rs
crates/mmdb-vector/src/store/: keys.rs  mod.rs  ops.rs  snapshot.rs  tests.rs
crates/mmdb/examples/: agent_memory.rs  auto_embed_demo.rs
crates/mmdb/src/: builder.rs  convert.rs  db.rs  embedder.rs  lib.rs  query_impl.rs  search.rs
crates/mmdb/src/tests/: mod.rs
docs/: ARCHITECTURE.md  IMPLEMENTATION.md
docs/crates/mmdb/: FEATURES.md
docs/crates/mmdb-blob/: FEATURES.md
docs/crates/mmdb-catalog/: FEATURES.md
docs/crates/mmdb-core/: FEATURES.md
docs/crates/mmdb-graph/: FEATURES.md
docs/crates/mmdb-mmql/: FEATURES.md
docs/crates/mmdb-query/: FEATURES.md
docs/crates/mmdb-storage/: FEATURES.md
docs/crates/mmdb-udf/: FEATURES.md
docs/crates/mmdb-vector/: FEATURES.md
