[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["mmdb contributors"]
repository = "https://github.com/your-org/mmdb"

[workspace.dependencies]
fjall = "2.4"
rkyv = { version = "0.7", features = ["validation", "smallvec", "uuid"] }
ulid = { version = "1.1", features = ["serde"] }
bytes = "1.7"
smallvec = { version = "1.13", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
parking_lot = "0.12"
blake3 = "1.5"
anyhow = "1"
tracing = "0.1"
hnsw_rs = "0.3"
dashmap = "6"
roaring = "0.10"
