[package]
name = "mmdb-blob"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
mmdb-core = { path = "../mmdb-core" }
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true
fjall.workspace = true
parking_lot.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
