[package]
name = "mmdb-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
mmdb-core = { path = "../mmdb-core" }
mmdb-storage = { path = "../mmdb-storage" }
fjall.workspace = true
ulid.workspace = true
serde.workspace = true
serde_json.workspace = true
smallvec.workspace = true

[dev-dependencies]
tempfile = "3"
