[package]
name = "mmdb-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
mmdb-core = { path = "../mmdb-core" }
fjall.workspace = true
ulid.workspace = true
bytes.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
tracing.workspace = true
thiserror.workspace = true
