[package]
name = "mmdb-vector"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
mmdb-core = { path = "../mmdb-core" }
mmdb-storage = { path = "../mmdb-storage" }
fjall.workspace = true
hnsw_rs.workspace = true
dashmap.workspace = true
roaring.workspace = true
ulid.workspace = true
parking_lot.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
