[package]
name = "mmdb"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
mmdb-core = { path = "../mmdb-core" }
mmdb-storage = { path = "../mmdb-storage" }
ulid.workspace = true
smallvec.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
anyhow.workspace = true
